zokrates_cli/examples/compile_errors/ifelse_statements.zok
def main(bool flag) -> field {
    field a = 1;
    return if flag {
        field b = a; // not supported
        b
    } else {
        false
    };
}